<resources>
    <string name="app_name">Figma</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="_11_20">11:20</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="i_agree_to_the_company_team_of_service_and_privacy_policy">I agree to the company Team of Service and Privacy Policy</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_in">Sign Up</string>
    <string name="welcome_back1">Welcome back!</string>
    <string name="unix_studio">Unix Studio</string>
    <string name="balance">Balance</string>
    <string name="idr_950_000_000">IDR 950.000.000</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_registration">Sign In</string>
    <string name="don_t_have_account_registraion">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="customer">Customer</string>
    <string name="profile">Profile</string>
    <string name="send_link">Send Link</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_we_will_send_a_vertication_code_to_email">Enter your email, we will send a vertication code to email</string>
    <string name="your_number">Type your phone number</string>
    <string name="contineu_one">Continue</string>
    <string name="verify_code">Verify Code</string>
    <string name="sign_in_with_google_regis">Sign in with Google</string>
</resources>