<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="50dp"
        android:id="@+id/imageLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_left"
        app:layout_constraintBottom_toTopOf="@id/reset_password"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/reset_password"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/enter_your_email_we_will_send_a_vertication_code_to_email"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editYourNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/your_number"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textDescription">

      <androidx.appcompat.widget.AppCompatEditText
          android:layout_width="match_parent"
          android:imeOptions="actionNext"
          android:inputType="number"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          android:drawableStart="@drawable/ic_profile"
          android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/button_sign_in"
        android:text="@string/send_link"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/editYourNumber"
        app:layout_constraintRight_toRightOf="@+id/editYourNumber"
        app:layout_constraintTop_toBottomOf="@id/editYourNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>