<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E88E5">

    <ImageView
        android:id="@+id/imageLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_left"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/verifyCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verifyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/verify_code"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_email_we_will_send_a_vertication_code_to_email"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyCode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editYourNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/your_number"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textDescription">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_profile"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editNumberOne"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:inputType="number"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/editNumberTwo"
        app:layout_constraintRight_toLeftOf="@id/editNumberTwo"
        app:layout_constraintStart_toStartOf="@id/button_continue"
        app:layout_constraintTop_toBottomOf="@+id/editYourNumber" />

    <EditText
        android:id="@+id/editNumberTwo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@id/editNumberThree"
        app:layout_constraintBottom_toBottomOf="@id/editNumberOne"
        app:layout_constraintLeft_toRightOf="@id/editNumberOne"
        app:layout_constraintTop_toBottomOf="@+id/editYourNumber" />

    <EditText
        android:id="@+id/editNumberThree"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/editNumberTwo"
        app:layout_constraintRight_toLeftOf="@id/editNumberFour"
        app:layout_constraintBottom_toTopOf="@id/button_continue"
        app:layout_constraintLeft_toRightOf="@id/editNumberTwo"
        app:layout_constraintTop_toBottomOf="@+id/editYourNumber" />

    <EditText
        android:id="@+id/editNumberFour"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintRight_toRightOf="@id/button_continue"
        android:background="@color/white"
        android:textStyle="bold"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_continue"
        app:layout_constraintLeft_toRightOf="@id/editNumberThree"
        app:layout_constraintTop_toBottomOf="@+id/editYourNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/button_continue"
        android:text="@string/contineu_one"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/editYourNumber"
        app:layout_constraintRight_toRightOf="@+id/editYourNumber"
        app:layout_constraintTop_toBottomOf="@id/editNumberOne" />
</androidx.constraintlayout.widget.ConstraintLayout>